--- a/correlation_COVID19.Rmd
+++ b/correlation_COVID19.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "correlation_COVID19.Rmd"
+title: "When linear correlation is not appropriate: COVID-19"
 output: html_document
 ---
 
@@ -7,10 +7,9 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## When linear correlation is not appropriate: COVID-19
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
-NSW<-data.frame( cases= c(22,25,28,36,40,47,60,64,77,91,111,133,170,209,267) ) #19 March
+NSW<-data.frame( cases= c(22,25,28,36,40,47,60,64,77,91,111,133,170,209,267,307) ) #19 March
 #NSW$increase = c(0, 6, 8, 4, 7, 13, 4, 12, 14, 20, 14, 22, 37))  
 NSW$date <- seq(as.Date("2020/3/4"), by = "day", length.out = length(NSW$cases))
 require(ggplot2)
