--- a/correlation_COVID19.Rmd
+++ b/correlation_COVID19.Rmd
@@ -9,13 +9,25 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
-NSW<-data.frame( cases= c(22,25,28,36,40,47,60,64,77,91,111,133,170,209,267,307) ) #19 March
+NSW<-data.frame( cases= c(22,25,28,36,40,47,60,64,77,91,111,133,170,209,267,307,353) ) #19 March
+#NSW$increase = c(0, 6, 8, 4, 7, 13, 4, 12, 14, 20, 14, 22, 37))  
+NSW$date <- seq(as.Date("2020/3/4"), by = "day", length.out = length(NSW$cases))
+require(ggplot2)
+NSWcor<-cor.test(as.numeric(NSW$date),NSW$cases) 
+g<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA)
+show(g)
+```
+
+## With regression line and r
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
+NSW<-data.frame( cases= c(22,25,28,36,40,47,60,64,77,91,111,133,170,209,267,307,353) ) #19 March
 #NSW$increase = c(0, 6, 8, 4, 7, 13, 4, 12, 14, 20, 14, 22, 37))  
 NSW$date <- seq(as.Date("2020/3/4"), by = "day", length.out = length(NSW$cases))
 require(ggplot2)
 NSWcor<-cor.test(as.numeric(NSW$date),NSW$cases) 
 g<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) +
-  geom_smooth(method='lm', fill=NA) + 
+  geom_smooth(method='lm', fill=NA) +  ylim(0,NA) +
   annotate("text",x=as.Date("2020/3/7"),y=100, label=paste0("r=",round(NSWcor$estimate,2)), parse=FALSE) 
 show(g)
 ```
