--- a/correlation_COVID19.Rmd
+++ b/correlation_COVID19.Rmd
@@ -8,14 +8,17 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
-NSW<-data.frame( cases= c(22,25,28,36,40,47,60,64,77,91,111,133,170,209,267,307,353,436,533,669,818,1029,1219,1405,1617,1791) ) #19 March
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = ""}
+NSW<-data.frame( cases= c(22,25,28,36,40,47,60,64,77,91,111,133,170,209,267,307,353,436,533,669,818,1029,1219,1405,1617,1791,1791+127) ) #19 March
 #NSW$increase = c(0, 6, 8, 4, 7, 13, 4, 12, 14, 20, 14, 22, 37))  
 NSW$date <- seq(as.Date("2020/3/4"), by = "day", length.out = length(NSW$cases))
+saveRDS(NSW, file="NSWcases.Rda") #for use by other scripts, like COVD19questions.Rmd
+```
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = ""}
 require(ggplot2)
 NSWcor<-cor.test(as.numeric(NSW$date),NSW$cases) 
 g<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA) +   annotate("text",x=as.Date("2020/3/25"),y=900, label=">100 cases\n from\n Ruby\n Princess",size=1.7)
-
 show(g)
 ```
 
