--- a/COVID19questions.Rmd
+++ b/COVID19questions.Rmd
@@ -95,10 +95,9 @@ When the number of cases does grow by the same percentage each day, it is called
 
 ## Exponential growth
 
-"Exponential growth" refers to when something increases by the same percentage on each day. Below, the data have been replotted with the vertical axis percent increase compared to the previous day rather than total number of cases.
+"Exponential growth" refers to when something increases by the same percentage on each day. Below, the data have been replotted with the vertical axis percent increase compared to the previous day rather than total number of cases. 
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = ""}
-
 #Calculate proportional increase
 increase<-diff(NSW$cases)
 increase<-c(0,increase) #pad with 0 for first item
@@ -117,7 +116,9 @@ show(j)
 ```
 
 The blue dots now form a horizontal line, because they were created by calculating a 20% increase compared to the previous day.
-This graph makes it obvious that after 23 March especially, there was not a constant percentage increase each day. Instead, the percentage increase became less and less.
+The reason that virus infections can grow exponentially is that each new person infected contributes an additional number of cases to the next day, by passing the virus on to more than one person (on average). Thus the new number of cases is some multiple (percentage added to) of the previous day's cases.
+
+For the real data (the black dots), this graph makes it obvious that after 23 March especially, there was not a constant percentage increase each day. Instead, the percentage increase became less and less.
 
 
 ##
@@ -143,7 +144,43 @@ question("If the number of cases grew exactly exponentially, where would the dat
 
 ## Semi-log plot 
 
-Constant slope
+While the % increase vertical axis is useful, it unfortunately does not show the cumulative number of cases, only the change since the previous day. As a result, from that graph we don't see how high the caseload has gotten. This is one reason that people often use a logarithmic vertical axis in situations of constant (or even approximate) percentage growth.
+
+On a non-logarithmic (linear) axis, a constant increase in *number* (not percentage) of cases results in a straight line. The greater the daily increase, the steeper the slope of the line. In other words, constant addition corresponds to a constant slope on a graph.
+
+For the case of exponential growth, we are interested in knowing what the number of cases is being *multiplied by* each day, not how much is being added to it. In the case of 20% growth, for instance, on each day the number of cases is the previous number plus 20%, which can be calculated by multiplying the previous day's number of cases by 1.2.
+
+Logarithms turn multiplication into addition, which means that on a logarithmic axis, stepping upward by a constant amount does not mean the number of cases has increased by the same number each time, but rather that it's been multiplied by the same number each time.
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
+
+k<-ggplot( data = NSW, aes( date, exponential )) + geom_point(color="blue",alpha=.6) + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA) +  theme(panel.grid.minor.y = element_blank())
+show(k + scale_y_log10() )
+
+```
+
+In the above plot, notice that the vertical axis labels do not mark out equal intervals additively. Rather, stepping up with steps of a particular size corresponds to multiplying by a constant amount with each step. Eac successive y-axis label is the previous label multipled by approximately three.
+
+an increment does not mean a constant is added to the number of cases each day, but rather a
+the number of cases increases by the s
+
+And multiplying by a constant on each day (e.g., 1.2 for 20% increase) is what exponential growth is. Thus, while 
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
+
+k<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA) + 
+  geom_point(data = NSW, aes(x = date, y = exponential), color = "blue", alpha=.6) +  theme(panel.grid.minor.y = element_blank()) +
+  scale_y_log10() 
+show(k) 
+
+```
+
+Compound interest
+
+A constant 
+The percentage change plot is 
+
+Constant slope means 
 
 ## A popular and complicated plot
 
