--- a/COVID19questions.Rmd
+++ b/COVID19questions.Rmd
@@ -152,20 +152,15 @@ For the case of exponential growth, we are interested in knowing what the number
 
 Logarithms turn multiplication into addition, which means that on a logarithmic axis, stepping upward by a constant amount does not mean the number of cases has increased by the same number each time, but rather that it's been multiplied by the same number each time.
 
+As a result, our 20% growth points fall on a straight line, because each successive point is a result of multiplying (rather than adding)
+by a constant, namely 1.2.
 ```{r, semilogTwenty, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
 k<-ggplot( data = NSW, aes( date, exponential )) + geom_point(color="blue",alpha=.6) + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA) +  theme(panel.grid.minor.y = element_blank()) +
-    annotate("text",x=as.Date("2020/3/15"),y=112, label="20% growth daily", color="blue", size=3, angle=38)
-show(k + scale_y_log10() )
-```
-As a result, our 20% growth points fall on a straight line, because each successive point is a result of multiplying (rather than adding)
-by a constant: 1.2.
-
-```{r, semilogTwenty, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
-k<-ggplot( data = NSW, aes( date, exponential )) + geom_point(color="blue",alpha=.6) + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA) +  theme(panel.grid.minor.y = element_blank())
+    annotate("text",x=as.Date("2020/3/15"),y=112, label="20% growth daily", color="blue", size=3, angle=46)
 show(k + scale_y_log10() )
 ```
 
-In the above plot, notice that the vertical axis labels do not mark out equal intervals. That is, taking equal steps up does not result in adding one number over and over, a number corresponding to the step size. Rather, taking equal steps upward corresponds to *multiplying* by a number that reflects the step size. For the interval between the successive y-axis labels, for example, each is the previous label multipled by approximately three.
+In the plot, notice that the vertical axis labels do not mark out equal intervals. That is, taking equal steps up does not result in adding one number over and over, a number corresponding to the step size. Rather, taking equal steps upward corresponds to *multiplying* by a number that reflects the step size. For the interval between the successive y-axis labels, for example, each is the previous label multipled by approximately three.
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
 start<-22; pctIncrease<-30
@@ -182,29 +177,136 @@ mm<-ggplot( data = NSW, aes( date, exponential )) + geom_point(color="blue") + t
   geom_point(aes(x = date, y = thirty), color = "red", alpha=.6) + 
   geom_point(aes(x = date, y = ten), color = "darkgreen", alpha=.6) + 
   theme(panel.grid.minor.y = element_blank()) +scale_y_log10() +
-  annotate("text",x=as.Date("2020/3/13"),y=38, label="10% growth daily", color="darkgreen", size=3, angle=15) +
-  annotate("text",x=as.Date("2020/3/15"),y=112, label="20% growth daily", color="blue", size=3, angle=28) +
-  annotate("text",x=as.Date("2020/3/16"),y=370, label="30% growth daily", color="red", size=3, angle=38)
+  annotate("text",x=as.Date("2020/3/13"),y=38, label="10% daily growth", color="darkgreen", size=3, angle=15) +
+  annotate("text",x=as.Date("2020/3/15"),y=112, label="20% daily growth", color="blue", size=3, angle=28) +
+  annotate("text",x=as.Date("2020/3/16"),y=370, label="30% daily growth", color="red", size=3, angle=38)
 show(mm) 
 ```
 
-And multiplying by a constant on each day (e.g., 1.2 for 20% increase) is what exponential growth is. Thus, while 
+The above plot shows that any particular daily growth rate (multiplication by a particular factor) results in a straight line of corresponding slope.
 
+Adding the actual data from NSW (black dots), we can see that it was growing exponentially at nearly 20% for some time. After 28 March, growth was no longer exponential. That is, the data after 28 March do not fall on a straight line, of any slope (OK, at this point this is just hope).
 
-Compound interest
+```{r, semilogboth, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
+h<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA) + 
+  geom_point(data = NSW, aes(x = date, y = exponential), color = "blue", alpha=.6) +
+  #  geom_point(aes(x = date, y = thirty), color = "red", alpha=.6) + 
+   # geom_point(aes(x = date, y = ten), color = "darkgreen", alpha=.6) + 
+  scale_y_log10()
+show(h)
+```
 
-A constant 
-The percentage change plot is 
+Exponential growth is not always bad. Investments often yield exponential growth, because on average their value increases by some percentage each year. For example, the U.S. stock market increased on average 14% a year between 2000 and the end of 2019. If your parents had invested \$2000 for you in the year 2000, at the beginning of 2020 it would have been worth about \$27,000. 
 
-Constant slope means 
+```{r, compounding, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
+stocks<-data.frame(
+   date = seq(from = as.Date("2000/1/1"), to = as.Date("2020/1/1"), by = "year") )
+stocks$val <- 2000
+pctIncreaseStocks<- 14
+for(i in 2:length(stocks$val)) {
+  stocks$val[i] <- stocks$val[i-1]*(1+pctIncreaseStocks/100)
+}
+ss<-ggplot( data = stocks, aes( date, val )) + geom_point() + theme_bw() + ylab("Value ($)") 
+show(ss)
+```
 
-## A popular and complicated plot
+Another way to get an intuition for what a particular growth rate means is to realize that each growth rate corresponds to a doubling every time a particular number of days elapses. The 14% growth rate of the stock market during the first twenty years of the century, for example, meant a doubling approximately every five years. Here I've added the doubling times to the 10, 20, and 30 percent growths.
+
+```{r, doubleTimes, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
+#1.20^(seq(1,8)) #Calculate doubling
+#Calculate doubling time with 2=rate^doublingDays.   doublingDays = 2^(1/rate)
+
+mm<-ggplot( data = NSW, aes( date, exponential )) + geom_point(color="blue") + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA) + 
+  geom_point(aes(x = date, y = thirty), color = "red", alpha=.6) + 
+  geom_point(aes(x = date, y = ten), color = "darkgreen", alpha=.6) + 
+  theme(panel.grid.minor.y = element_blank()) +scale_y_log10() +
+  annotate("text",x=as.Date("2020/3/16"),y=50, label="10% daily growth, doubling about every 8 days", color="darkgreen", size=3, angle=15) +annotate("text",x=as.Date("2020/3/19"),y=240, label="20% daily growth, doubling about every 4 days", color="blue", size=3, angle=28) +
+  annotate("text",x=as.Date("2020/3/20"),y=920, label="30% daily growth, doubling about every 3 days", color="red", size=3, angle=38)
+show(mm)
+```
+
+## Population density and flu mortality
+
+[Hoffman & Cox](https://bioone.org/journals/Transactions-of-the-Kansas-Academy-of-Science/volume-122/issue-3-4/062.122.0301/The-1918-1920-H1N1-Influenza-a-Pandemic-in-Kansas-and/10.1660/062.122.0301.full?casa_token=TtDsr1exh58AAAAA%3apcP2D8e87Ap0vYATPNofQCiq8zgIp8b0MKMHjn_awr9KMYZ7Mc65AKRiwnFi6aZrro9m6xvGYQDG) here plot data from the 1918 flu pandemic. The plot shows the mortality rate against the population density for different counties in Kansas and Missouri.
+
+```{r, echo=FALSE, out.width = "400px"}
+knitr::include_graphics("images/log1918MortalityKansasVsLogPopDensity.png")
+``` 
+
+Not only is the vertical axis logarithmic, but also the horizontal axis is logarithmic.
+
+```{r KansasMissouriCorrelatn}
+question("From this plot, what do you think is the relationship between population density and mortality rate?",
+    answer("No relationship", ), 
+    answer("Positive correlation", correct=TRUE),
+    answer("Negative correlation"),
+    allow_retry = TRUE
+)
+```
+
+What causal statement might people suspect to be true from the data in this plot?
+
+```{r KansasMissouriCausation}
+question("From this plot, what do you think is the relationship between population density and mortality rate?",
+    answer("No relationship", ), 
+    answer("Positive correlation", correct=TRUE),
+    answer("Negative correlation"),
+    allow_retry = TRUE
+)
+```
+
+## Inferring causation
+
+```{r, echo=FALSE, out.width = "400px"}
+knitr::include_graphics("images/log1918MortalityKansasVsLogPopDensity.png")
+``` 
+
+So far, we have discussed inferences of causation from correlations, where the correlation is evident from a scatterplot of Y against X, and people tend to infer that X caused Y.
+
+As you know, the correlation of Y with X and X with Y are the same, so in principle, a plot like that of the above is just as consistent with Y causing X as with X causing Y. However, in some cases a causal link is much more plausible in one direction than in another. For example, it is plausible that higher population density causes a higher rate of flu deaths. A more detailed causal model is that population density causes more frequent physical contact between people, which causes more flu transmission, which causes more deaths.
+
+But could Y cause X? That is, could flu deaths cause higher population density? That's is not very plausible, illustrating that with some pairs of variables, causation in only one direction is likely
+
+### Many points means more evidence
+
+Scatterplots typically have lots of data points.  If they form a fairly consistent pattern of Y increasing or decreasing with X, this provides a lot of evidence for a correlation, which is what one wants before making the further leap to imputing a causal relationship. 
+
+## A plot from the news media
+
+Now use your skills to interpret this plot produced by the Financial Times.
 
 ```{r, echo=FALSE, out.width = "750px"}
 knitr::include_graphics("images/30MarCovid19CasesFT.png") #You can't change the image directory for Shiny apps
+
+#Calculate rate for a particular doubling time
+#2 = rate^doublingTime
+#rate = 2^(1/doublingTime)
 ``` 
 
-What may be slightly confusing in this plot is that the labels on the vertical axis are not equally spaced, in order to position them at round numbers.
+This plot has a logarithmic vertical axis, so going up a particular distance corresponds to multiplying by a particular factor. One feature you haven't seen before perhaps is that the axis labels are not at equal multiplicative intervals, in order to position them at round numbers.
+
+```{r us}
+question("Consider the U.S. data, shown in light purple. For the first fifteen days or so after its 100th case, how fast were the number of confirmed cases growing?",
+    answer("Exponentially, doubling about every 2 days.", correct=TRUE),
+    answer("Linearly, doubling about every 2 days."),
+    answer("Linearly, increasing by the same number of cases each day, on average."),
+    allow_retry = TRUE
+)
+```
+
+##
+```{r, echo=FALSE, out.width = "750px"}
+knitr::include_graphics("images/30MarCovid19CasesFT.png") #You can't change the image directory for Shiny apps
+
+#Calculate rate for a particular doubling time
+#2 = rate^doublingTime
+#rate = 2^(1/doublingTime)
+USrate = round( (2^(1/2)  -1) * 100  )
+``` 
+
+Doubling every two days, as the U.S. was doing for about two weeks, corresponds to a `r USrate`% daily growth rate.
+
+##
 
 ```{r, echo=FALSE, fig.cap="https://twitter.com/jperla/status/1243349875015553024", out.width = "750px"}
 knitr::include_graphics("images/masksNoMasksExplainsIt.png") #You can't change the image directory for Shiny apps
@@ -223,7 +325,7 @@ question("What idea do you think the person who scrawled on this image wished to
 )
 ```
 
-## Next
+## Causal inference
 
 ```{r, echo=FALSE, fig.cap="https://twitter.com/jperla/status/1243349875015553024", out.width = "750px"}
 knitr::include_graphics("images/masksNoMasksExplainsIt.png") #You can't change the image directory
